# saas-base

./: LICENSE  README.md
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: dependencies.py  main.py  utils.py
backend/app/_api/v1/: accounts.py
backend/app/accounts/: emails.py  models.py  services.py
backend/app/auth/services/: auth.py  jwt.py  oauth.py  security.py
backend/app/core/: database.py  logging.py
backend/app/organizations/: models.py
backend/app/projects/: models.py
backend/app/scripts/: load_demo_data.py  startup.sh
frontend/: openapi-ts.config.ts  package.json  pnpm-lock.yaml
frontend/public/locales/en/: translation.json
frontend/public/locales/id/: translation.json
frontend/src/: main.tsx  router.tsx
frontend/src/auth/: AuthProvider.tsx  types.ts  use-auth.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/apps/: AppCard.tsx
frontend/src/components/layout/: EntityListLayout.tsx
frontend/src/components/settings/: organization-form.tsx  profile-form.tsx
frontend/src/i18n/: config.ts
frontend/src/pages/apps/: index.tsx  mockData.ts
frontend/src/pages/settings/organizations/: api-keys.tsx
frontend/src/pages/settings/profile/: user.tsx
